# evaris

./: .gitignore  LICENSE  Makefile  README.md  package.json
.github/actions/evaris-eval/: Dockerfile  action.yml  entrypoint.sh  example-workflow.yml  post_comment.py  run_eval.py  test_data.json
core/: README.md  pyproject.toml
core/evaris/: __init__.py  _async_helpers.py  baselines.py  categories.py  client.py  compliance.py  contamination.py  dataset.py  evaluate.py  oracle.py  retry.py  statistics.py  tracing.py  types.py  validation.py
core/evaris/core/: __init__.py  protocols.py  registry.py  types.py
core/evaris/metrics/: __init__.py  answer_match.py  context_relevance.py  faithfulness.py  fuzz_test.py  llm_judge_legacy.py  semantic_similarity.py  state_match.py  unit_test.py
core/evaris/metrics/advanced/: arena_g_eval.py  conversational_g_eval.py  dag.py
core/evaris/metrics/agentic/: __init__.py  plan_adherence.py  step_efficiency.py  task_completion.py  tool_correctness.py
core/evaris/metrics/conversational/: conversation_completeness.py  conversation_relevancy.py  knowledge_retention.py  role_adherence.py
core/evaris/metrics/llm_judge/: __init__.py  judge.py  prompts.py
core/evaris/metrics/llm_judge/tools/: __init__.py  base.py  code_executor.py  search.py
core/evaris/metrics/multimodal/: image_coherence.py  image_helpfulness.py  multimodal_answer_relevancy.py  multimodal_contextual_precision.py  multimodal_contextual_recall.py  multimodal_contextual_relevancy.py  multimodal_faithfulness.py  text_to_image.py
core/evaris/metrics/nlp/: bleu.py  meteor.py  rouge.py
core/evaris/metrics/quality/: g_eval.py  hallucination.py  json_correctness.py  summarization.py
core/evaris/metrics/rag/: __init__.py  answer_relevancy.py  context_entity_recall.py  context_precision.py  context_recall.py  contextual_relevancy.py  ragas.py
core/evaris/metrics/safety/: __init__.py  bias.py  misuse.py  non_advice.py  pii_leakage.py  red_teaming.py  role_violation.py  toxicity.py
core/evaris/providers/: __init__.py  base.py  factory.py  openrouter.py
core/evaris/wrappers/: base.py  conversation.py  langchain.py  simple.py
core/tests/: conftest.py
core/tests/e2e/: conftest.py  test_context_entity_recall_e2e.py  test_full_flow.py
core/tests/integration/: test_client_retry.py  test_context_entity_recall_integration.py  test_cost_tracking.py  test_llm_judge_real_api.py  test_red_teaming.py
core/tests/metrics/: test_advanced_metrics.py  test_agentic_metrics.py  test_context_entity_recall.py  test_conversational_metrics.py  test_llm_judge.py  test_multimodal_metrics.py  test_nlp_metrics.py  test_quality_metrics.py  test_rag_metrics.py  test_safety_metrics.py
core/tests/unit/: test_client.py  test_conversation_wrapper.py  test_retry.py
core/tests/unit/wrappers/: test_base_wrapper.py  test_langchain_wrapper.py
docs/: sdk-authentication.md
env/: config.example.json  setup.py
sdk/python/: README.md  pyproject.toml
sdk/python/evaris_client/: __init__.py  client.py  types.py
sdk/python/examples/: .env.example  01_basic_eval.py  02_chat_agent_eval.py  03_streaming_eval.py  04_experiments.py  05_tracing.py  06_compliance.py  07_full_workflow.py  README.md  TESTING_GUIDE.md  requirements.txt
sdk/typescript/: package.json  pnpm-lock.yaml  tsconfig.json
sdk/typescript/src/: client.ts  errors.ts  index.ts  types.ts
server/: Dockerfile  pyproject.toml
server/evaris_server/: __init__.py  app.py  auth.py  config.py  db.py  register_metrics.py  routes.py  runner.py  schemas.py
server/tests/: conftest.py
server/tests/integration/: test_assess.py  test_health.py  test_log.py  test_trace.py
server/tests/unit/: test_auth.py  test_database.py  test_schemas.py
shared/prisma/: schema.prisma
test/datasets/: file_upload.jsonl
web/: .env.example  .gitignore  .npmrc  README.md  biome.json  components.json  design_guidelines.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
web/.storybook/: main.ts  preview.tsx
web/src/: client.tsx  router.tsx  ssr.tsx  styles.css
web/src/components/: AuthGuard.tsx  Logo.tsx  ThemeToggle.tsx
web/src/components/compliance/: ComplianceDashboard.tsx  index.ts
web/src/components/dashboard/: CreateDialog.tsx  DatasetCard.tsx  EditDialog.tsx  EvalsTable.tsx  PerformanceChart.tsx  ProjectCard.tsx  RecentActivity.tsx  StatCard.tsx
web/src/components/evals/: EvalResultsTable.tsx  EvalRunCard.tsx  MetricCharts.tsx  MetricInsights.tsx  TestResultsTable.tsx  index.ts
web/src/components/layout/: AppSidebar.tsx
web/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  input.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  password-strength-meter.tsx  popover.tsx  progress.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  slider.tsx  switch.tsx  tabs.tsx  toast.tsx  toaster.tsx  toggle-group.tsx  (+2 more)
web/src/hooks/: use-toast.ts
web/src/lib/: auth-client.ts  password-validation.ts  queryClient.ts  rate-limiter.ts  trpc.ts
web/src/routes/: __root.tsx  _authenticated.tsx  forgot-password.tsx  index.tsx  login.tsx  reset-password.tsx  signup.tsx
web/src/routes/_authenticated/: dashboard.tsx  datasets.tsx  evals.tsx  logs.tsx  projects.tsx  settings.tsx  traces.tsx
web/src/server/: auth.ts  db.ts
web/src/server/trpc/: context.ts  trpc.ts
web/src/stories/: Configure.mdx
web/src/stories/dashboard/: DatasetCard.stories.tsx  PerformanceChart.stories.tsx  ProjectCard.stories.tsx  RecentActivity.stories.tsx  StatCard.stories.tsx
web/src/stories/layout/: Logo.stories.tsx
web/src/stories/ui/: Alert.stories.tsx  Badge.stories.tsx  (+18 more)
web/storybook-static/: index.json  project.json
web/storybook-static/sb-manager/: globals-module-info.js  runtime.js
web/supabase/: config.toml
(+33 files in other folders)
