[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evaris-client"
version = "0.2.0"
description = "Lightweight Python client for Evaris AI evaluation platform"
authors = [
    { name = "Roshan Nrusing Swain", email = "swaingotnochill@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ai", "evaluation", "llm", "observability", "tracing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
]
examples = [
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://evaris.ai"
Repository = "https://github.com/evarisai/evaris"

[tool.hatch.build.targets.wheel]
packages = ["evaris_client"]
